--- a/codenationhtmldrsday010/index.html
+++ b/codenationhtmldrsday010/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>Mr David R Southall ESQ - Homepage</title>
 </head>
 <body>
@@ -54,6 +55,33 @@
     </p>
     <p>
         The purpose of training with Code Nation is to build on my existing IT skills with 2020 industry standard practices so I can add further options to consider, by doing both the 3 week and the 3 month course I would be able to consider if I wanted to work for an employer in the future or continue with my business idea. “Education creates options which creates freedom!”.
+    </p>
+    <p>
+        For further information about me, <a href=1_0.html>click here</a>. <br>
+        <br>
+
+        <a href="1_1.html">Click here</a> for describing the purpose of IT in modern business <br>
+        <br>
+        
+        <a href="1_2.html">Click here</a> for describing methods, skills and resources needed to complete digital projects successfully – what do you need to make projects successful? What tools? What Skills?<br>
+        <br>
+
+        <a href="1_3.html">Click here</a> for plan and carry out tasks using IT – e.g. making your website. How will you plan it? Include a link to your Trello board. <br>
+        <br>
+
+        <a href="1_4.html">Click here</a> for describe the risks that might impact digital projects – what causes digital projects to fail? Why? <br>
+        <br>
+
+        <a href="1_5.html">Click here</a> for describe how you would go about selecting and using IT systems and software – how do you select the right kind of technology for the job? <br>
+        <br>
+
+        <a href="1_6.html">Click here</a> for describe and provide analysis on how your chosen technologies have helped you achieve your outcomes. – How has Trello helped you plan and how can git and GitHub help with your code version control. <br>
+        <br>
+
+        <a href="1_7.html">Click here</a> for describe legal guidelines and constraints that impact digital projects – How does GDPR impact digital projects?
+
+
+
     </p>
 </body>
 </html>
