--- a/codenationhtmldrsday010/1_0.html
+++ b/codenationhtmldrsday010/1_0.html
@@ -18,7 +18,7 @@
         The earliest training I received was when I was around 18 in COBOL then C programming.
     </p>
     <p>
-        2001 I was an IT Manager for Car World Direct Ltd, it was a very stressful job and the owner was a martinet, a close friend died and my brain did the equivalent of a blue screen of death, I then isolated myself in my fortress of solitude(my flat) and eat(self harmed) my way to 38 stone in weight or 241.311KG. 
+        2001 I was an IT Manager for a car sales business, it was a very stressful job and the owner was a martinet, a close friend died and my brain did the equivalent of a blue screen of death, I then isolated myself in my fortress of solitude(my flat) and eat(self harmed) my way to 38 stone in weight or 241.311KG. 
     </p>
     <p>
         I had a two stage duodenal switch operation in 2009 & 2010, this has reduced my weight to its current level of around 20 stone or 127.006KG. I hope to eventually reach around 15 stone which is a normal weight for my height and build.
@@ -60,8 +60,18 @@
     <p>
         The purpose of training with Code Nation is to build on my existing IT skills with 2020 industry standard practices so I can add further options to consider, by doing both the 3 week and the 3 month course I would be able to consider if I wanted to work for an employer in the future or continue with my business idea. “Education creates options which creates freedom!”.
     </p>
-    <p>
-        <a href="index.html">Home</a>
-    </p>
+
+    <div class="container">
+        <div class="box box2"><a href=1_1.html>Page 2</a></div>
+        <div class="box box3"><a href=1_2.html>Page 3</a></div>
+        <div class="box box4"><a href=1_3.html>Page 4</a></div>
+        <div class="box box5"><a href=1_4.html>Page 5</a></div>
+        <div class="box box6"><a href=1_5.html>Page 6</a></div>
+        <div class="box box7"><a href=1_6.html>Page 7</a></div>
+        <div class="box box8"><a href=1_7.html>Page 8</a></div>
+    </div>
+    <div class="homeLinkContainer">
+        <a href="index.html" id="homeLink">Home</a>
+    </div>
 </body>
 </html>
