--- a/codenationhtmldrsday010/index.html
+++ b/codenationhtmldrsday010/index.html
@@ -25,8 +25,12 @@
         <br>
         - Subheadings for different sections (i.e. about me, my background, your interests in technology and coding, what made you interested in joining Code Nation) 
     </p>
-    -->
-    <img src="images/angel.jpg" alt="This is me">
+  
+    <img src="images/angel.jpg" alt="This is me" id="siteImage">
+      -->
+ 
+    <video controls autoplay id="doodlyVideo" src="videos/Mr-David-R-Southall-ESQ.mp4"></video>
+ 
     <h2>
         About me
     </h2>
@@ -82,6 +86,19 @@
 
 
 
+    </p>
+    <div class="container">
+        <div class="box box1"><a href=1_0.html>Page 1</a></div>
+        <div class="box box2"><a href=1_1.html>Page 2</a></div>
+        <div class="box box3"><a href=1_2.html>Page 3</a></div>
+        <div class="box box4"><a href=1_3.html>Page 4</a></div>
+        <div class="box box5"><a href=1_4.html>Page 5</a></div>
+        <div class="box box6"><a href=1_5.html>Page 6</a></div>
+        <div class="box box7"><a href=1_6.html>Page 7</a></div>
+        <div class="box box8"><a href=1_7.html>Page 8</a></div>
+    </div>
+    <p>
+        <a href="how.html">Click here</a> for how this site was built.
     </p>
 </body>
 </html>
