--- a/codenationhtmldrsday010/1_1.html
+++ b/codenationhtmldrsday010/1_1.html
@@ -19,8 +19,18 @@
     <p>
         Nowadays the formula for business success is simple: drive innovation with information technology. So, the first thing startups in any industry try to figure out is how to make smart IT recruiting choices. Without a backbone of information technology, a business is not going to go far.
     </p>
-    <p>
-        <a href="index.html">Home</a>
-    </p>
+
+    <div class="container">
+        <div class="box box1"><a href=1_0.html>Page 1</a></div>
+        <div class="box box3"><a href=1_2.html>Page 3</a></div>
+        <div class="box box4"><a href=1_3.html>Page 4</a></div>
+        <div class="box box5"><a href=1_4.html>Page 5</a></div>
+        <div class="box box6"><a href=1_5.html>Page 6</a></div>
+        <div class="box box7"><a href=1_6.html>Page 7</a></div>
+        <div class="box box8"><a href=1_7.html>Page 8</a></div>
+    </div>
+    <div class="homeLinkContainer">
+        <a href="index.html" id="homeLink">Home</a>
+    </div>
 </body>
 </html>
