--- a/codenationhtmldrsday010/1_3.html
+++ b/codenationhtmldrsday010/1_3.html
@@ -56,8 +56,18 @@
             As well as the submitted HTML the final product will be available to view at <a href="https://david-r-southall.me/">https://david-r-southall.me/</a>
         </p>
 
-    <p>
-        <a href="index.html">Home</a>
-    </p>
+
+        <div class="container">
+            <div class="box box1"><a href=1_0.html>Page 1</a></div>
+            <div class="box box2"><a href=1_1.html>Page 2</a></div>
+            <div class="box box3"><a href=1_2.html>Page 3</a></div>
+            <div class="box box5"><a href=1_4.html>Page 5</a></div>
+            <div class="box box6"><a href=1_5.html>Page 6</a></div>
+            <div class="box box7"><a href=1_6.html>Page 7</a></div>
+            <div class="box box8"><a href=1_7.html>Page 8</a></div>
+        </div>
+        <div class="homeLinkContainer">
+            <a href="index.html" id="homeLink">Home</a>
+        </div>
 </body>
 </html>
