--- a/codenationhtmldrsday010/1_4.html
+++ b/codenationhtmldrsday010/1_4.html
@@ -20,8 +20,18 @@
             Governance risk relates to board and management performance with regard to ethics, community stewardship, and company reputation. Strategic risks result from errors in strategy, such as choosing a technology that can’t be made to work. Operational risk includes risks from poor implementation and process problems such as procurement, production, and distribution. Market risks include competition, foreign exchange, commodity markets, and interest rate risk, as well as liquidity and credit risks. Legal risks arise from legal and regulatory obligations, including contract risks and litigation brought against the organization. Risks associated with external hazards, including storms, floods, and earthquakes; vandalism, sabotage, and terrorism; labor strikes; and civil unrest.
         </p>
 
-    <p>
-        <a href="index.html">Home</a>
-    </p>
+
+        <div class="container">
+            <div class="box box1"><a href=1_0.html>Page 1</a></div>
+            <div class="box box2"><a href=1_1.html>Page 2</a></div>
+            <div class="box box3"><a href=1_2.html>Page 3</a></div>
+            <div class="box box4"><a href=1_3.html>Page 4</a></div>
+            <div class="box box6"><a href=1_5.html>Page 6</a></div>
+            <div class="box box7"><a href=1_6.html>Page 7</a></div>
+            <div class="box box8"><a href=1_7.html>Page 8</a></div>
+        </div>
+        <div class="homeLinkContainer">
+            <a href="index.html" id="homeLink">Home</a>
+        </div>
 </body>
 </html>
