--- a/codenationhtmldrsday010/1_5.html
+++ b/codenationhtmldrsday010/1_5.html
@@ -28,8 +28,18 @@
         <p>
             You may want to carry out a technology needs assessment to help you consider what your business needs are today, but also what they might be in the future. Technology moves quickly, so it's worth getting a future-proof system and keeping up with the latest developments.
         </p>
-    <p>
-        <a href="index.html">Home</a>
-    </p>
+
+        <div class="container">
+            <div class="box box1"><a href=1_0.html>Page 1</a></div>
+            <div class="box box2"><a href=1_1.html>Page 2</a></div>
+            <div class="box box3"><a href=1_2.html>Page 3</a></div>
+            <div class="box box4"><a href=1_3.html>Page 4</a></div>
+            <div class="box box5"><a href=1_4.html>Page 5</a></div>
+            <div class="box box7"><a href=1_6.html>Page 7</a></div>
+            <div class="box box8"><a href=1_7.html>Page 8</a></div>
+        </div>
+        <div class="homeLinkContainer">
+            <a href="index.html" id="homeLink">Home</a>
+        </div>
 </body>
 </html>
